--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DesignAntonio | DA</title>
+    <title>AntonioDesign | AD</title>
+    <meta name="keywords" content="Sviluppo web, AntonioDesign, UI Designer, Front End Developer">
+    <meta name="description"
+        content="Hey ciao, sono un Freelancer che realizza siti web e che potrà sicuramente darti una mano. D'altronde attrae clienti, facendolo conoscere e posizionandolo nel mercato in modo chiaro.">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.11/swiper-bundle.min.css"
         integrity="sha512-E4x7MeSRzG1n6xxtYu9Iwk4EQKyz/1ra6Wp4QevgoMQqOSN5XCXIfcBlNtfb3YA5U3JV9EAZxf58ENl1+rvCwQ=="
         crossorigin="anonymous" />
@@ -13,10 +17,17 @@
 </head>
 
 <body>
+    <img class="bgg" src="css/icons/bgGray.svg" alt="background">
+    <div class="sitoWeb">
+        <img src="css/icons/mark.svg" alt="Perchè un sito web?">
+        <button>
+            <a href="#website">Perchè un sito</a>
+        </button>
+    </div>
     <main id="up1" class="landingPage">
         <section>
             <nav>
-                <img src="css/icons/Logo.svg">
+                <img src="css/icons/SVG.svg" alt="AntonioDesign">
                 <ul>
                     <li><a href="#projects">Progetti</a></li>
                     <li><a target="_blank" href="mailto:antoniosalzano9325@gmail.com">Contattami</a></li>
@@ -57,7 +68,7 @@
             </button>
         </section>
     </main>
-    <main class="website">
+    <main id="website" class="website">
         <section class="title">
             <h1>
                 A cosa mi<br>
@@ -90,7 +101,7 @@
             <div>
 
                 <button class="upgradeWithme">MIGLIORA CON ME</button>
-                <img src="/css/icons/grow.svg">
+                <img src="/css/icons/grow.svg" alt="Migliorare la propria azienda">
 
             </div>
             <div>
@@ -108,19 +119,19 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png">
+                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png" alt="Blog & Go | AntonioDesign">
                     <div class="overlay"></div>
                 </div>
                 <div class="swiper-slide">
-                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png">
+                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png" alt="Blog & Go | AntonioDesign">
                     <div class="overlay"></div>
                 </div>
                 <div class="swiper-slide">
-                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png">
+                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png" alt="Blog & Go | AntonioDesign">
                     <div class="overlay"></div>
                 </div>
                 <div class="swiper-slide">
-                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png">
+                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png" alt="Blog & Go | AntonioDesign">
                     <div class="overlay"></div>
                 </div>
             </div>
