--- a/index.html
+++ b/index.html
@@ -9,154 +9,143 @@
     <meta name="keywords" content="Sviluppo web, AntonioDesign, UI Designer, Front End Developer">
     <meta name="description"
         content="Hey ciao, sono un Freelancer che realizza siti web e che potrà sicuramente darti una mano. D'altronde attrae clienti, facendolo conoscere e posizionandolo nel mercato in modo chiaro.">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.11/swiper-bundle.min.css"
-        integrity="sha512-E4x7MeSRzG1n6xxtYu9Iwk4EQKyz/1ra6Wp4QevgoMQqOSN5XCXIfcBlNtfb3YA5U3JV9EAZxf58ENl1+rvCwQ=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+        integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+        crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.15/swiper-bundle.min.css"
+        integrity="sha512-uA1+kHA/0O68FTSM4jeTzJNnRvNWxdCCSnE3gv8LaySXYxQT3nc5uPX9buMPtI1gxUBcxm0+5Lcw59jjl0nMDQ=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="/style.css">
 </head>
 
-<body>
-    <img class="bgg" src="css/icons/bgGray.svg" alt="background">
-    <div class="sitoWeb">
-        <img src="css/icons/mark.svg" alt="Perchè un sito web?">
-        <button>
-            <a href="#website">Perchè un sito</a>
-        </button>
-    </div>
-    <main id="up1" class="landingPage">
-        <section>
+<body data-scroll-container>
+
+    <section data-scroll-section id="landingPage">
+        <img class="bg" alt="Sviluppatore Web Campania" src="css/icons/bgGray.svg"></img>
+        <div class="wrapper">
+            <div class="flexxed">
+                <img src="/css/icons/mark.svg" alt="Perchè un sito?">
+                <button class="whySite">Perchè un sito</button>
+            </div>
             <nav>
-                <img src="css/icons/SVG.svg" alt="AntonioDesign">
+                <img src="css/icons/Newsss.svg" alt="AntonioDesign">
                 <ul>
-                    <li><a href="#projects">Progetti</a></li>
-                    <li><a target="_blank" href="mailto:antoniosalzano9325@gmail.com">Contattami</a></li>
+                    <li><a href="#">Progetti</a></li>
+                    <li><a href="mailto:antoniodesign00@gmail.com">Contattami</a></li>
                 </ul>
+                <div></div>
             </nav>
-            <h1>
-                Aiuto aziende nello<br>
-                sviluppo delle loro <span>idee</span>
+            <h1 class="main_title">
+                <span data-aos-delay="500" data-aos="fade-up">Idee</span> e <span data-aos="fade-right"
+                    data-aos-delay="700">Soluzione</span>.<br>
+                <span data-aos="fade-down" data-aos-delay="1300">Progettiamo insieme</span>
             </h1>
             <div class="tags">
                 <div class="tag">
-                    <h2>Freelancer</h2>
+                    <h1>Freelancer</h1>
                 </div>
                 <div class="tag">
-                    <h2>UI Designer</h2>
+                    <h1>Web Developer</h1>
                 </div>
             </div>
-            <div class="content">
+            <header>
                 <p>
-                    sono un freelancer che realizza siti e che potrà<br> sicuramente darti una mano.
+                    Sono un freelancer che realizza siti e che potrà<br>
+                    sicuramente darti una mano.
                 </p>
                 <p>
-                    Un sito web può aumentare decisamente la tua<br> crescita e popolarità.
+                    Un sito web può aumentare decisamente la tua crescita e<br>
+                    popolarità.
                 </p>
                 <p>
-                    Prima di realizzarlo però, è importante capire cosa<br> trasmettere al proprio cliente e tutto ciò
-                    che
-                    ne concerne.
+                    Prima di realizzarlo però, è importante capire cosa<br>
+                    trasmettere al proprio cliente e tutto ciò che ne concerne.
                 </p>
-            </div>
-        </section>
-        <section>
-            <button class="talk">
-                <a target="_blank" href="mailto:antoniosalzano9325@gmail.com">
-                    <img src="css/icons/Call.svg">
-                    <h3>PARLIAMO</h3>
-                </a>
+            </header>
+            <button class="talkWithMe">
+                <img src="css/icons/Call.svg" alt="PARLIAMO INSIEME DI TE">
+                <h1>PARLIAMO</h1>
+                <!-- <h1>SCRIVIMI</h1> -->
             </button>
-        </section>
-    </main>
-    <main id="website" class="website">
-        <section class="title">
-            <h1>
-                A cosa mi<br>
-                servirebbe un sito web?
-            </h1>
-        </section>
-        <section class="content">
-
-            <p>
-                Un sito web è un elemento che dimostra<br>
-                le tue competenze e le tue abilità.
-            </p>
-            <p>
-                Attrae futuri clienti al tuo negozio<br>
-                facendolo conoscere e posizionandolo<br>
-                nel mercato in modo chiaro
-            </p>
-            <p>
-                Mostra cosa puoi offrire al<br>
-                tuo visitatore.
-            </p>
-
-        </section>
-        <section class="img">
-
-            <img src="/css/icons/undrawGrow.svg" alt="Design Antonio | Migliora e cresci con me">
-
-        </section>
-        <section class="button">
-            <div>
-
-                <button class="upgradeWithme">MIGLIORA CON ME</button>
-                <img src="/css/icons/grow.svg" alt="Migliorare la propria azienda">
-
-            </div>
-            <div>
-
-                <p>Progetti</p>
-                <img src="/css/icons/ArrowDown.svg" alt="Design Antonio | Progetti">
-
-            </div>
-        </section>
-    </main>
-    <main id="projects" class="projects">
-        <div class="title">
-            <h1>Progetti</h1>
         </div>
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png" alt="Blog & Go | AntonioDesign">
-                    <div class="overlay"></div>
-                </div>
-                <div class="swiper-slide">
-                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png" alt="Blog & Go | AntonioDesign">
-                    <div class="overlay"></div>
-                </div>
-                <div class="swiper-slide">
-                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png" alt="Blog & Go | AntonioDesign">
-                    <div class="overlay"></div>
-                </div>
-                <div class="swiper-slide">
-                    <img class="img" src="/mockUps/Blog/mockUpWhitePc.png" alt="Blog & Go | AntonioDesign">
-                    <div class="overlay"></div>
-                </div>
+    </section>
+
+    <section data-scroll-section id="web">
+        <div class="wrapper">
+            <div>
+                <h1 class="main_title">
+                    A cosa mi servirebbe un sito?
+                </h1>
+
+                <header>
+                    <p data-aos="fade-left">
+                        Un sito web è un elemento che dimostra<br>
+                        le tue competenze e le tue abilità.
+                    </p>
+                    <p data-aos="fade-left" data-aos-delay="300">
+                        Attrae futuri clienti al tuo negozio<br>
+                        facendolo conoscere e posizionare<br>
+                        nel mercato in modo chiaro.
+                    </p>
+                    <p data-aos="fade-left" data-aos-delay="600" class="main">
+                        Mostra cosa puoi offrire al<br>
+                        tuo cliente.
+                    </p>
+                </header>
             </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
+
+            <img alt="Miglioriamo il tuo prodotto" class="imgWeb" src="/css/icons/undrawGrow.svg"></img>
+
+            <div class="flexBtn">
+                <button data-aos="fade-up" data-aos-delay="600" class="talking talkWithMe">
+                    <h1>MIGLIORA CON ME</h1>
+                </button>
+                <img alt="Miglioriamo insieme il tuo progetto" data-aos="fade-up" data-aos-delay="700"
+                    src="/css/icons/grow.svg">
+            </div>
         </div>
-    </main>
+    </section>
+
+    <section data-scroll-section id="mockups">
+        <div class="wrapper">
+            <div>
+                <h1>Progetti</h1>
+            </div>
+            <div class="swiper-container" data-aos="fade-down">
+
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img class="imageSlide" src="/mockUps/Blog/mockUpWhitePc.png" alt="">
+
+                    </div>
+                    <div class="swiper-slide">
+                        <img class="imageSlide" src="/mockUps/Blog/mockUpWhitePc.png" alt="">
+                        <div class="overlay"></div>
+                    </div>
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+        </div>
+    </section>
+
     <footer>
-        <div class="semiContainer">
+        <div class="wrapper">
             <div>
-                <a target="_blank" href="mailto:antoniosalzano9325@gmail.com">Contattami</a>
+                <a href="mailto:antoniodesign00@gmail.com">Contattami</a>
                 <a href="#">Privacy</a>
             </div>
-            <a href="#up1">
-                <img src="/css/icons/ArrowOnWithbg.svg" alt="">
-            </a>
+            <img alt="torna sopra" class="goOn" src="css/icons/ArrowOnWithbg.svg">
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.11/swiper-bundle.min.js"
-        integrity="sha512-BCI7oYyp1DzEqb0qCOEC7QwIYCPAj6N+Wn9dqhxU8FCDcDQyoGdWuuOUMicxsy7pDQQQToyfsnuHWE/ixtng3Q=="
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.15/swiper-bundle.min.js"
+        integrity="sha512-NahckN+grB6fSxu3vQdKiyC69swjW6+xYUjaPVWTGtRuia8zUIlw2gkgjhZmAd8lAECEHV3HdCudarnAZaWkZw=="
         crossorigin="anonymous"></script>
-    <script src="js/swiper.js"></script>
-    <script src="js/ui.js"></script>
 
-
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
