--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
         integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
         crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.15/swiper-bundle.min.css"
-        integrity="sha512-uA1+kHA/0O68FTSM4jeTzJNnRvNWxdCCSnE3gv8LaySXYxQT3nc5uPX9buMPtI1gxUBcxm0+5Lcw59jjl0nMDQ=="
-        crossorigin="anonymous" />
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.scss">
 </head>
 
-<body data-scroll-container>
+<body>
 
-    <section data-scroll-section id="landingPage">
+    <section id="landingPage">
         <img class="bg" alt="Sviluppatore Web Campania" src="css/icons/bgGray.svg"></img>
         <div class="wrapper">
             <div class="flexxed">
@@ -70,7 +67,7 @@
         </div>
     </section>
 
-    <section data-scroll-section id="web">
+    <section id="web">
         <div class="wrapper">
             <div>
                 <h1 class="main_title">
@@ -106,7 +103,7 @@
         </div>
     </section>
 
-    <section data-scroll-section id="mockups">
+    <section id="mockups">
         <div class="wrapper">
             <div>
                 <h1>Progetti</h1>
@@ -115,12 +112,10 @@
 
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img class="imageSlide" src="/mockUps/Blog/mockUpWhitePc.png" alt="">
-
+                        <img class="imageSlide" src="/css/icons/mockUpWhitePc.png" alt="">
                     </div>
                     <div class="swiper-slide">
-                        <img class="imageSlide" src="/mockUps/Blog/mockUpWhitePc.png" alt="">
-                        <div class="overlay"></div>
+                        <img class="imageSlide" src="/css/icons/mockUpWhitePc.png" alt="">
                     </div>
                 </div>
 
@@ -141,10 +136,6 @@
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.15/swiper-bundle.min.js"
-        integrity="sha512-NahckN+grB6fSxu3vQdKiyC69swjW6+xYUjaPVWTGtRuia8zUIlw2gkgjhZmAd8lAECEHV3HdCudarnAZaWkZw=="
-        crossorigin="anonymous"></script>
-
     <script src="js/scripts.js"></script>
 </body>
 
