--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AntonioDesign | AD</title>
+    <title>Antonio Design</title>
+    <link rel="shortcut icon" type="image/svg" href="css/icons/Newsss.svg">
     <meta name="keywords" content="Sviluppo web, AntonioDesign, UI Designer, Front End Developer">
     <meta name="description"
         content="Hey ciao, sono un Freelancer che realizza siti web e che potrà sicuramente darti una mano. D'altronde attrae clienti, facendolo conoscere e posizionandolo nel mercato in modo chiaro.">
@@ -13,6 +14,15 @@
         integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
         crossorigin="anonymous" />
     <link rel="stylesheet" href="/style.scss">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DDBPEDWXK3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-DDBPEDWXK3');
+    </script>
 </head>
 
 <body>
